--- a/JS projects/Menu/index.html
+++ b/JS projects/Menu/index.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Starter</title>
     <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <section class ="menu">
-      <!-- Title-->
-      <div class="title"> 
-        <h2> Our Menu</h2>
-        <div class="underline">
-      </div>
+</head>
 
-      <!--Filter button-->
-      
-      <!--Menu-->
-       <div class="section-center">
-         <!-- Menu Items-->
-       <article class="menu_item">  
-       
-        <img src="menu-item.jpeg" class="photo" alt="">
-         <div class="item-info">
+<body>
+    <section class="menu">
+        <!-- Title-->
+        <div class="title">
+            <h2> Our Menu</h2>
+            <div class="underline"></div>
 
-          <header>
-            <h4>butterMilk Pancakes.</h4>
-            <h4 class="price">$15</h4>
-          </header>
-          <p class="item-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi molestias repellendus et voluptatibus sed ex perferendis iure eum quae nostrum.
-          </p>
-           </div>
+        </div>
 
-      </article>
 
-       </div>
-      </div>
+        <!--Menu-->
+        <div class="section-center">
+            <!-- Single Menu Items-->
+            <!-- single item -->
+            <article class="menu-item">
+                <img src="./menu-item.jpeg" alt="menu item" class="photo" />
+                <div class="item-info">
+                    <header>
+                        <h4>buttermilk pancakes</h4>
+                        <h4 class="price">$15</h4>
+                    </header>
+                    <p class="item-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, sint quam. Et reprehenderit fugiat nesciunt inventore laboriosam excepturi! Quo, officia.
+                    </p>
+                </div>
+            </article>
+
+            <!--End of single item-->
+
+
+
+
+        </div>
+
+
+        <!--Filter button-->
+
     </section>
     <!-- javascript -->
     <script src="app.js"></script>
-  </body>
+</body>
+
 </html>
